--- a/contact_me.html
+++ b/contact_me.html
@@ -8,7 +8,8 @@
     <h1>My Contact Details</h1>
     <dl>
       <dt><em>Olivia Brown</em></dt>
-      <dt>E-mail: <em>olivia@mymail.com</em></dt>
+      <dt>E-mail: <em>olivia@SomeEmail.com</em></dt>
     </dl>
+    <p>(This email is <strong>NOT</strong> real)</p>
 </body>
 </html>
